syntax = "proto3";
package message;

import "common/datapoint.proto";

option go_package = "github.com/thingspect/atlas/api/go/message";

message ValidatorOut {
  // Data point.
  common.DataPoint point = 1;

  // Organization ID (UUID).
  string org_id = 2;

  // Device ID (UUID).
  string dev_id = 3;
}
